kelas istio/02. Traffic management/h. secure ingress/dashboard/dashboard-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dashboard-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway-second
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "istio.geprek-milenial.xyz"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: tls-istio-geprek-milenial
    hosts:
    - "istio.geprek-milenial.xyz"
